# wikimaker

./: .dockerignore  .env  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/ingestion/: scraper.py  text.py  youtube.py
app/processing/: extractor.py  linker.py  llm.py  merger.py  prompts.py
app/static/: style.css
app/storage/: wiki.py
app/templates/: add_source.html  author.html  base.html  concept.html  edit_concept.html  home.html  search_results.html  settings.html
data/chris-paxton/: meta.json
data/chris-paxton/_sources/: 153b684dc9f158fd.txt  40cd4f0d3639db85.txt  5e8dcfcae799c482.txt  6e020a50df62ec6f.txt  7be89fc1d1f165c8.txt  a694a9c79a99de6c.txt  ced1b59ceb0a4eb5.txt  fe2a692924b33f22.txt
data/chris-paxton/concepts/: academic-reluctance-on-common-platforms.md  actuator-simplicity-for-cost-reduction.md  advancement-and-pervasive-impact-of-large-language-models.md  argument-from-setup-differences.md  armored-and-resilient-ground-platforms.md  associative-memory-as-core-architecture.md  autonomy-gradient-from-munitions-to-human-targets.md  benchmarking-for-zero-shot-generalization-in-robotics.md  breakthroughs-in-real-world-robotic-manipulation-and-foundation-models.md  catastrophic-forgetting.md  cherry-picking-benchmarks.md  choosing-weak-baselines.md  co-training-on-human-and-robot-data.md  (+82 more)
data/gabriele-tinelli/: meta.json
data/peter-fenton/: meta.json
data/rui-ma/: meta.json
data/sarah-elkhaldy/: meta.json
wikimaker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+88 files in other folders)
